Adjust to PDEMigrationDelegate new location

--- a/org.scala-ide.equinox-weaving-launcher/plugin.xml
+++ b/org.scala-ide.equinox-weaving-launcher/plugin.xml
@@ -173,7 +173,7 @@
       delegateDescription="The Equinox Weaving enabled Eclipse Application launcher is used to run or debug a separate instance of an Equinox Weaving enabled Eclipse application"
       delegateName="Equinox Weaving enabled Eclipse Application Launcher"
       id="org.scala-ide.ew.launcher.RuntimeWorkbench"
-      migrationDelegate="org.eclipse.pde.internal.ui.launcher.PDEMigrationDelegate"
+      migrationDelegate="org.eclipse.pde.internal.launching.launcher.PDEMigrationDelegate"
       modes="run, debug"
       name="Eclipse Application with Equinox Weaving "
       sourceLocatorId="org.eclipse.pde.ui.launcher.PDESourceLookupDirector"
@@ -185,7 +185,7 @@
       delegateDescription="The Equinox Weaving enabled JUnit Plugin Test launcher is used to run and debug test suites for Equinox Weaving enabled plug-in projects"
       delegateName="Equinox Weaving enabled JUnit Plugin Test Launcher"
       id="org.scala-ide.ew.launcher.JunitLaunchConfig"
-      migrationDelegate="org.eclipse.pde.internal.ui.launcher.PDEMigrationDelegate"
+      migrationDelegate="org.eclipse.pde.internal.launching.launcher.PDEMigrationDelegate"
       modes="run, debug"
       name="JUnit Plug-in Test with Equinox Weaving "
       sourceLocatorId="org.eclipse.pde.ui.launcher.PDESourceLookupDirector"
